# django-nuxt-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: settings.py
