[tool.poetry]
name = "projeto-django-nuxt"
version = "1.0.0"
description = "Um projeto simples de integração Django-Nuxt."
authors = ["Erie Dias <eriedias7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
